# Agentic-Leadgen-Platform

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.worker  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: backup-db.yml  cd.yml  ci.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 3ef419cbeb54_init.py
app/: main.py
app/agents/: base.py  graph.py  lead_deduplicator.py  lead_enricher.py  lead_qualifier.py  lead_scorer.py  lead_scraper.py  lead_validator.py  outreach_planner.py
app/api/: dependencies.py
app/core/: celery_app.py  config.py  constants.py  database.py  exceptions.py  logging.py  redis_client.py  security.py
app/domain/: events.py  handlers.py
app/guardrails/: compliance_checker.py  content_moderator.py  input_validator.py  output_filter.py  pii_detector.py  rate_limiter.py  toxicity_filter.py
app/middleware/: auth_middleware.py  error_handler.py  logging_middleware.py  rate_limit_middleware.py  request_id.py
app/models/: __init__.py  audit_log.py  base.py  campaign.py  email_log.py  lead.py  scraping_job.py  user.py  webhook_delivery.py
app/schemas/: analytics.py  campaign.py  common.py  lead.py  user.py  webhook.py
app/scrapers/: base.py  browser_pool.py  company_website.py  crunchbase.py  linkedin.py  proxy_manager.py  rate_limiter.py  twitter.py  user_agent_pool.py
app/services/: analytics_service.py  cache_service.py  campaign_service.py  email_service.py  enrichment_service.py  export_service.py  lead_service.py  notification_service.py  scoring_service.py  webhook_service.py
app/tools/: llm_failover.py  mcp_client.py  mcp_server.py  mcp_tools.py
app/utils/: context.py  exporters.py  formatters.py  metrics.py  pagination.py  retry.py  validators.py
app/vector_store/: embeddings.py  lead_index.py  rag_qualifier.py  similarity_search.py  vector_client.py
app/workers/: cleanup_tasks.py  (+4 more)
docker/: Dockerfile.celery-beat
nginx/: nginx.conf
scripts/: backup.sh  backup_db.py  cleanup_old_leads.py  deploy.sh  healthcheck.sh  init_db.py  migrate_old_data.py  monitor_queue.py  restore_db.py  rollback.sh  seed_data.py
(+22 files in other folders)
